# 3DModelViewer

./: CMakeLists.txt  README.md  imgui.ini  main.cpp
headers/: ImGuiWindow.h  camera.h  framebuffer.h  light.h  mesh.h  model.h  shader.h  stb_image.h  texture.h
include/ImGuiFileDialog/: ImGuiFileDialog.h
include/assimp/: revision.h
include/glad/: glad.h
include/lpng/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  libpng.sln  png-fix-itxt.vcxproj  png-fix-itxt.vcxproj.filters  png_genfiles.vcxproj  png_shared.vcxproj  png_static.vcxproj  png_static.vcxproj.filters  pngfix.vcxproj  pngfix.vcxproj.filters  pngimage.vcxproj  pngimage.vcxproj.filters  pngstest.vcxproj  pngstest.vcxproj.filters  pngtest.vcxproj  pngtest.vcxproj.filters  pngunknown.vcxproj  pngunknown.vcxproj.filters  pngvalid.vcxproj  pngvalid.vcxproj.filters
include/zlib/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  (+17 more)
shaders/: FragmentShaderDirectLight.glsl  FragmentShaderPoint.glsl  FragmentShaderRealLight.glsl  FragmentShaderSpotlight.glsl  VertexShader.glsl  axisfs.glsl  axisshader.glsl  glbmodelfs.glsl  lightfs.glsl  lightvs.glsl  modelfs.glsl  modelvs.glsl  stlmodelfs.glsl  testmodelfs.glsl  vertex.glsl
src/: ImGuiFileDialog.cpp  glad.c  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_stdlib.cpp  imgui_tables.cpp  imgui_widgets.cpp
(+152 files in other folders)
